--- a/src/com/paulcosma/public_html/index.html
+++ b/src/com/paulcosma/public_html/index.html
@@ -87,6 +87,8 @@
                 <div class="col-lg-6 col-lg-offset-3">
                     <p class="copyright">Powered by <i class="fa fa-love"></i><a href="http://getbootstrap.com">Bootstrap</a>
                     </p>
+                    <p class="footer"> Test 2
+                    </p>
                 </div>
             </div>
         </div>
