--- a/src/com/paulcosma/public_html/index.html
+++ b/src/com/paulcosma/public_html/index.html
@@ -86,6 +86,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
                     <p class="copyright">Powered by <i class="fa fa-love"></i><a href="http://getbootstrap.com">Bootstrap</a>
+                    <p class="footer">Test branch
                     </p>
                 </div>
             </div>
