Open links in new tab

--- a/src/com/paulcosma/public_html/index.html
+++ b/src/com/paulcosma/public_html/index.html
@@ -72,20 +72,20 @@
                 </div>
                 <div class="col-sm-12 align-center">
                     <ul class="social-network social-circle">
-                        <li><a href="https://www.facebook.com/paulcosma" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/paulcosma" target="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="https://twitter.com/PaulPCosma" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/PaulPCosma" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://github.com/paulcosma" class="icoGit" title="Github"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/paulcosma" target="_blank" class="icoGit" title="Github"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/paulpcosma/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/paulpcosma/" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
-                    <p class="copyright">Powered by <i class="fa fa-love"></i><a href="http://getbootstrap.com">Bootstrap</a>
+                    <p class="copyright">Powered by <i class="fa fa-love"></i><a href="http://getbootstrap.com" target="_blank" >Bootstrap</a>
                     </p>
                 </div>
             </div>
