Valid email message

--- a/src/com/paulcosma/public_html/index.html
+++ b/src/com/paulcosma/public_html/index.html
@@ -149,7 +149,7 @@ function validateEmail(email) {
 // method will be called when "Get notified!" button is clicked. onclick="return continueOrNot()"
 function continueOrNot() {
     if(validateEmail(document.getElementById('exampleInputEmail1').value)){
-        alert('Valid email'); return true;
+        alert('Valid email. Thank you!'); return true;
     }else{ alert("Email not valid"); return false;}
 }
     </script>
